# aes-prompt-improving

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
analysis/: aggregate_qwk_pivot.csv  aggregate_results.csv  aggregate_results.json  score_statistics.csv
notebooks/: 01_dataset_exploration.ipynb  02_bert_baseline_demo.ipynb  03_pann_demo.ipynb  04_results_comparison.ipynb
scripts/: compare_models.py  evaluate.py  pann_drl_train.py  pann_train.py  prepare_data.py  run_all_prompts.py  train.py
scripts/utils/: __init__.py  analyze_scores.py  collect_results.py
src/: __init__.py
src/data/: __init__.py  dataset.py  pann_dataset.py  tokenizer.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  transformer_aes.py
src/models/drl/: __init__.py  agent.py  cnaa.py  cst.py
src/models/pann/: __init__.py  model.py
src/utils/: config.py  logger.py
